vlib/v/parser/tests/register_imported_interface.vv
import io { Reader }
interface Reader {}
